--- a/faq.html
+++ b/faq.html
@@ -114,7 +114,7 @@
 
             <section class="about__cli" id="about-cli">
                 <div class="section__inner">
-                    <div class="section__title about-cli__title">診医院について</div>
+                    <div class="section__title about-cli__title">医院について</div>
                     <ul class="about-cli__lists">
                         <li class="about-cli__list">
                             <input type="checkbox" id="toggle6" class="about-cli-list__tog">
